<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        android:orientation="horizontal">
		
        <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:gravity="left"
	        android:orientation="vertical">
        
			<LinearLayout
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal">
		
			    <TextView
			        android:id="@+id/txt_numberObjects"
			        android:layout_width="50dp"
			        android:layout_height="fill_parent"
			        android:gravity="right|center_vertical"
			        android:paddingRight="5dp"
			        android:paddingLeft="5dp"
			        android:text="@string/numberObjects" />
		
			    <EditText
			        android:id="@+id/numberObjects"
			        android:layout_width="100dp"
			        android:layout_height="wrap_content"
			        android:inputType="numberDecimal" >
		
			        <requestFocus />
			    </EditText>
		
			</LinearLayout>
	
			<LinearLayout
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal">
				
			    <TextView
			        android:id="@+id/txt_volumePerObject"
			        android:layout_width="50dp"
			        android:layout_height="fill_parent"
			        android:paddingRight="5dp"
			        android:paddingLeft="5dp"
			        android:gravity="right|center_vertical"
			        android:text="@string/volumePerObject" />
			    
			    <EditText
			        android:id="@+id/volumePerObject"
			        android:layout_width="100dp"
			        android:layout_height="wrap_content"
			        android:inputType="numberDecimal" />
			</LinearLayout>
			<LinearLayout
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal">
			    
			    <TextView
			        android:id="@+id/txt_price"
			        android:layout_width="50dp"
			        android:layout_height="fill_parent"
			        android:paddingRight="5dp"
			        android:paddingLeft="5dp"
			        android:gravity="right|center_vertical"
			        android:text="@string/price" />
			    
			    <EditText
			        android:id="@+id/price"
			        android:layout_width="100dp"
			        android:layout_height="wrap_content"
			        android:inputType="numberDecimal" />
			</LinearLayout>
	
			<LinearLayout
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal" >
			    <TextView
			        android:id="@+id/txt_results_txt"
			        android:layout_width="50dp"
			        android:layout_height="fill_parent"
			        android:paddingTop="10dp"
			        android:paddingRight="5dp"
			        android:paddingLeft="5dp"
			        android:gravity="right|center_vertical"
			        android:text="@string/txt_results" />
			    <TextView
			        android:id="@+id/txt_results"
			        android:layout_width="100dp"
			        android:layout_height="fill_parent"
			        android:hint=""
			        android:paddingTop="10dp" />
			</LinearLayout>
		
		</LinearLayout>
			
		<!-- ########## -->	
			
		<LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:gravity="right"
	        android:orientation="vertical">
				
			<LinearLayout
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal">
			    
			    <TextView
			        android:id="@+id/txt_numberObjects2"
			        android:layout_width="50dp"
			        android:layout_height="fill_parent"
			        android:paddingRight="5dp"
			        android:paddingLeft="5dp"
			        android:gravity="right|center_vertical"
			        android:text="@string/numberObjects" />
			
			    <EditText
			        android:id="@+id/numberObjects2"
			        android:layout_width="100dp"
			        android:layout_height="wrap_content"
			        android:inputType="numberDecimal" >
			    </EditText>
		    </LinearLayout>
			<LinearLayout
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal">
			    		
			    <TextView
			        android:id="@+id/txt_volumePerObject2"
			        android:layout_width="50dp"
			        android:layout_height="fill_parent"
			        android:paddingRight="5dp"
			        android:paddingLeft="5dp"
			        android:gravity="right|center_vertical"
			        android:text="@string/volumePerObject" />
			    
			    <EditText
			        android:id="@+id/volumePerObject2"
			        android:layout_width="100dp"
			        android:layout_height="wrap_content"
			        android:inputType="numberDecimal" />
				
		    </LinearLayout>
			<LinearLayout
				    android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:orientation="horizontal">
			    <TextView
			        android:id="@+id/txt_price2"
					android:layout_width="50dp"
			        android:layout_height="fill_parent"
			        android:paddingRight="10dp"
			        android:gravity="right|center_vertical"
			        android:text="@string/price" />
			
			    <EditText
			        android:id="@+id/price2"
			        android:layout_width="100dp"
			        android:layout_height="wrap_content"
			        android:inputType="numberDecimal" />
		
			</LinearLayout>
			<LinearLayout
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal">
			    
			    <TextView
			        android:id="@+id/txt_results2_txt"
			        android:layout_width="50dp"
			        android:layout_height="fill_parent"
			        android:paddingTop="10dp"
			        android:paddingRight="5dp"
			        android:paddingLeft="5dp"
			        android:gravity="right|center_vertical"
			        android:text="@string/txt_results" />
			    <TextView
			        android:id="@+id/txt_results2"
			        android:layout_width="100dp"
			        android:layout_height="wrap_content"
			        android:hint=""
			        android:paddingTop="10dp" />
			</LinearLayout> 
		</LinearLayout>
	</LinearLayout>
	
	<LinearLayout
    		android:orientation="horizontal"
    		android:layout_gravity="center"
    		android:paddingTop="20dp"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" >
		<ImageButton
		    android:id="@+id/btnBerrylize1"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/btnBerrylize"
	        android:src="@drawable/ic_launcher_strawberry"
	        android:background="@null"
		    />
		
	</LinearLayout>
</LinearLayout>